--- a/blog-single.html
+++ b/blog-single.html
@@ -34,6 +34,12 @@
   <!-- Main Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   
+  <!-- Color Scheme CSS Files -->
+  <link rel="stylesheet" href="css/hero-colors.css">
+  <link rel="stylesheet" href="css/logo-colors.css">
+  <link rel="stylesheet" href="css/section-colors.css">
+  <link rel="stylesheet" href="css/sticky-nav.css">
+  
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
