--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
           <div class="header-top-info mb-2 mb-md-0">
             <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
-            <a href="mailto:support@gmail.com"><i class="fas fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+            <a href="mailto:info@mandril.md"><i class="fas fa-envelope mr-2"></i><span>info@mandril.md</span></a>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg px-0 py-4">
             <a class="navbar-brand" href="index.html">
-              Mega<span>kit.</span>
+              <img src="images/logo-text.svg" alt="Mandril" style="max-height: 50px;" onerror="this.onerror=null; this.src='images/logo.png';">
             </a>
       
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
@@ -147,9 +147,9 @@
 		<div class="row">
 			<div class="col-lg-9 col-md-10">
 				<div class="block">
-					<span class="d-block mb-3 text-white text-capitalize">Prepare for new future</span>
-					<h1 class="animated fadeInUp mb-5">Our work is <br>presentation of our <br>capabilities.</h1>
-					<a href="#"  class="btn btn-main animated fadeInUp btn-round-full" aria-label="Get started">Get started<i class="btn-icon fa fa-angle-right ml-2"></i></a>
+					<span class="d-block mb-3 text-white text-capitalize">Foreign Trade – Industry & Agriculture</span>
+					<h1 class="animated fadeInUp mb-5">Your trusted partner for import and export operations</h1>
+					<a href="#contact" class="btn btn-main animated fadeInUp btn-round-full" aria-label="Get started">Get started<i class="btn-icon fa fa-angle-right ml-2"></i></a>
 				</div>
 			</div>
 		</div>
@@ -162,32 +162,31 @@
 		<div class="row ">
 			<div class="col-lg-8">
 				<div class="section-title">
-					<span class="h6 text-color ">We are creative & expert people</span>
-					<h2 class="mt-3 content-title">We work with business & provide solution to client with their business problem
-					</h2>
+					<span class="h6 text-color">We are experts in international trade</span>
+					<h2 class="mt-3 content-title">We provide professional solutions for import and export in industrial and agricultural sectors</h2>
 				</div>
 			</div>
 		</div>
 		<div class="row justify-content-center">
 			<div class="col-lg-4 col-md-6 col-12">
 				<div class="intro-item mb-5 mb-lg-0">
-					<i class="ti-desktop color-one"></i>
-					<h4 class="mt-4 mb-3">Modern & Responsive design</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus.</p>
+					<i class="ti-world color-one"></i>
+					<h4 class="mt-4 mb-3">Global Reach</h4>
+					<p>Expanding international business through experience and strong partnerships.</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-6">
 				<div class="intro-item mb-5 mb-lg-0">
 					<i class="ti-medall color-one"></i>
-					<h4 class="mt-4 mb-3">Awarded licensed company</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus.</p>
+					<h4 class="mt-4 mb-3">Quality & Reliability</h4>
+					<p>Quality-focused approach and efficient commercial solutions for each client.</p>
 				</div>
 			</div>
 			<div class="col-lg-4 col-md-12">
 				<div class="intro-item">
-					<i class="ti-layers-alt color-one"></i>
-					<h4 class="mt-4 mb-3">Build your website Professionally</h4>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, ducimus.</p>
+					<i class="ti-briefcase color-one"></i>
+					<h4 class="mt-4 mb-3">Professional Expertise</h4>
+					<p>Solutions tailored to the specifics of each market in the industrial and agricultural sectors.</p>
 				</div>
 			</div>
 		</div>
@@ -203,14 +202,13 @@
 		<div class="row">
 			<div class="col-lg-6 offset-lg-6 offset-md-0">
 				<div class="about-item ">
-					<span class="h6 text-color">What we are</span>
-					<h2 class="mt-3 mb-4 position-relative content-title">We are dynamic team of creative people</h2>
+					<span class="h6 text-color">Who we are</span>
+					<h2 class="mt-3 mb-4 position-relative content-title">Your reliable partner in international trade</h2>
 					<div class="about-content">
-						<h4 class="mb-3 position-relative">We are Perfect Solution</h4>
-						<p class="mb-5">We provide consulting services in the area of IFRS and management reporting, helping
-							companies to reach their highest level. We optimize business processes, making them easier.</p>
+						<h4 class="mb-3 position-relative">We are the Perfect Solution</h4>
+						<p class="mb-5">We provide comprehensive trading services in the industrial and agricultural sectors, connecting businesses across international markets with quality products and professional support.</p>
 
-						<a href="#" class="btn btn-main btn-round-full">Get started</a>
+						<a href="#contact" class="btn btn-main btn-round-full">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -258,7 +256,7 @@
 			<div class="col-lg-7 text-center">
 				<div class="section-title">
 					<span class="h6 text-color">Our Services</span>
-					<h2 class="mt-3 content-title ">We provide a wide range of creative services </h2>
+					<h2 class="mt-3 content-title">We provide comprehensive commercial solutions for various sectors</h2>
 				</div>
 			</div>
 		</div>
@@ -266,49 +264,49 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-desktop"></i>
-					<h4 class="mb-3">Web development.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-bolt"></i>
+					<h4 class="mb-3">Fuels, Ores and Metals</h4>
+					<p>International trade of fuels, ores and metals across global markets</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-layers"></i>
-					<h4 class="mb-3">Interface Design.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-package"></i>
+					<h4 class="mb-3">Industrial Chemicals</h4>
+					<p>Trade of industrial chemical products for various applications</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-bar-chart"></i>
-					<h4 class="mb-3">Business Consulting.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-settings"></i>
+					<h4 class="mb-3">Machinery & Industrial Equipment</h4>
+					<p>Import and export of machinery and equipment for industrial purposes</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5 mb-lg-0">
-					<i class="ti-vector"></i>
-					<h4 class="mb-3">Branding.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-crown"></i>
+					<h4 class="mb-3">Cereals & Agricultural Products</h4>
+					<p>Import and export of cereals and other agricultural products</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5 mb-lg-0">
-					<i class="ti-android"></i>
-					<h4 class="mb-3">App development.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-apple"></i>
+					<h4 class="mb-3">Fresh & Dried Fruits</h4>
+					<p>Trade of high-quality fresh and dried fruits</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5 mb-lg-0">
-					<i class="ti-pencil-alt"></i>
-					<h4 class="mb-3">Content creation.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-truck"></i>
+					<h4 class="mb-3">Logistics Support</h4>
+					<p>Comprehensive logistics and delivery solutions for all products</p>
 				</div>
 			</div>
 		</div>
@@ -321,11 +319,11 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xl-5 col-lg-6">
-				<div class="cta-item  bg-white p-5 rounded">
-					<span class="h6 text-color">We create for you</span>
-					<h2 class="mt-2 mb-4">Entrust Your Project to Our Best Team of Professionals</h2>
-					<p class="lead mb-4">Have any project on mind? For immidiate support :</p>
-					<h3><i class="ti-mobile mr-3 text-color"></i>+23 876 65 455</h3>
+				<div class="cta-item bg-white p-5 rounded">
+					<span class="h6 text-color">Ready to start?</span>
+					<h2 class="mt-2 mb-4">Contact us today for professional trading solutions</h2>
+					<p class="lead mb-4">For immediate support and inquiries:</p>
+					<h3><i class="ti-email mr-3 text-color"></i>info@mandril.md</h3>
 				</div>
 			</div>
 		</div>
@@ -338,8 +336,8 @@
 		<div class="row">
 			<div class="col-lg-7 ">
 				<div class="section-title">
-					<span class="h6 text-color">Clients testimonial</span>
-					<h2 class="mt-3 content-title">Check what's our clients say about us</h2>
+					<span class="h6 text-color">Client testimonials</span>
+					<h2 class="mt-3 content-title">What our partners say about us</h2>
 				</div>
 			</div>
 		</div>
@@ -351,12 +349,11 @@
 				<i class="ti-quote-left text-color"></i>
 
 				<div class="testimonial-item-content">
-					<p class="testimonial-text">Quam maiores perspiciatis temporibus odio reiciendis error alias debitis atque
-						consequuntur natus iusto recusandae numquam corrupti facilis blanditiis.</p>
+					<p class="testimonial-text">Professional service and reliable delivery. Mandril has been our trusted partner for industrial equipment imports for over 3 years.</p>
 
 					<div class="testimonial-author">
-						<h5 class="mb-0 text-capitalize">Thomas Johnson</h5>
-						<p>Excutive Director,themefisher</p>
+						<h5 class="mb-0 text-capitalize">James Anderson</h5>
+						<p>CEO, Industrial Solutions Ltd</p>
 					</div>
 				</div>
 			</div>
@@ -364,12 +361,11 @@
 				<i class="ti-quote-left text-color"></i>
 
 				<div class="testimonial-item-content">
-					<p class="testimonial-text">Consectetur adipisicing elit. Quam maiores perspiciatis temporibus odio reiciendis
-						error alias debitis atque consequuntur natus iusto recusandae .</p>
+					<p class="testimonial-text">Excellent quality products and outstanding customer support. They always deliver on time and handle all documentation professionally.</p>
 
 					<div class="testimonial-author">
-						<h5 class="mb-0 text-capitalize">Mickel hussy</h5>
-						<p>Excutive Director,themefisher</p>
+						<h5 class="mb-0 text-capitalize">Maria Schmidt</h5>
+						<p>Procurement Manager, AgriCorp</p>
 					</div>
 				</div>
 			</div>
@@ -377,12 +373,11 @@
 				<i class="ti-quote-left text-color"></i>
 
 				<div class="testimonial-item-content">
-					<p class="testimonial-text">Quam maiores perspiciatis temporibus odio reiciendis error alias debitis atque
-						consequuntur natus iusto recusandae numquam corrupti.</p>
+					<p class="testimonial-text">Great experience working with Mandril. Their expertise in international trade and attention to detail makes them stand out.</p>
 
 					<div class="testimonial-author">
-						<h5 class="mb-0 text-capitalize">James Watson</h5>
-						<p>Excutive Director,themefisher</p>
+						<h5 class="mb-0 text-capitalize">David Chen</h5>
+						<p>Director, Pacific Trading Co</p>
 					</div>
 				</div>
 			</div>
@@ -390,12 +385,11 @@
 				<i class="ti-quote-left text-color"></i>
 
 				<div class="testimonial-item-content">
-					<p class="testimonial-text">Consectetur adipisicing elit. Quam maiores perspiciatis temporibus odio reiciendis
-						error alias debitis atque consequuntur natus iusto recusandae .</p>
+					<p class="testimonial-text">Reliable partner for our agricultural exports. They understand our needs and always find the best solutions for our business.</p>
 
 					<div class="testimonial-author">
-						<h5 class="mb-0 text-capitalize">Mickel hussy</h5>
-						<p>Excutive Director,themefisher</p>
+						<h5 class="mb-0 text-capitalize">Elena Rodriguez</h5>
+						<p>Export Director, FarmFresh International</p>
 					</div>
 				</div>
 			</div>
@@ -409,7 +403,7 @@
 			<div class="col-lg-7 text-center">
 				<div class="section-title">
 					<span class="h6 text-color">Latest News</span>
-					<h2 class="mt-3 content-title text-white">Latest articles to enrich knowledge</h2>
+					<h2 class="mt-3 content-title text-white">Industry insights and market updates</h2>
 				</div>
 			</div>
 		</div>
@@ -421,12 +415,12 @@
 
 					<div class="card-body mt-2">
 						<div class="blog-item-meta">
-							<a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-							<a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+							<a href="#" class="text-white-50">Trade<span class="ml-2 mr-2">/</span></a>
+							<a href="#" class="text-white-50">Industry<span class="ml-2">/</span></a>
 							<a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
 						</div>
 
-						<h3 class="mt-3 mb-5 lh-36"><a href="#" class="text-white ">How to improve design with typography?</a></h3>
+						<h3 class="mt-3 mb-5 lh-36"><a href="blog-single.html" class="text-white">Global trends in industrial equipment trade</a></h3>
 
 						<a href="blog-single.html" class="btn btn-small btn-solid-border btn-round-full text-white">Learn More</a>
 					</div>
@@ -439,13 +433,12 @@
 
 					<div class="card-body mt-2">
 						<div class="blog-item-meta">
-							<a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-							<a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+							<a href="#" class="text-white-50">Agriculture<span class="ml-2 mr-2">/</span></a>
+							<a href="#" class="text-white-50">Export<span class="ml-2">/</span></a>
 							<a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
 						</div>
 
-						<h3 class="mt-3 mb-5 lh-36"><a href="#" class="text-white">Interactivity design may connect consumer</a>
-						</h3>
+						<h3 class="mt-3 mb-5 lh-36"><a href="blog-single.html" class="text-white">Agricultural products market analysis 2024</a></h3>
 
 						<a href="blog-single.html" class="btn btn-small btn-solid-border btn-round-full text-white">Learn More</a>
 					</div>
@@ -458,12 +451,12 @@
 
 					<div class="card-body mt-2">
 						<div class="blog-item-meta">
-							<a href="#" class="text-white-50">Design<span class="ml-2 mr-2">/</span></a>
-							<a href="#" class="text-white-50">Ui/Ux<span class="ml-2">/</span></a>
+							<a href="#" class="text-white-50">Logistics<span class="ml-2 mr-2">/</span></a>
+							<a href="#" class="text-white-50">Import<span class="ml-2">/</span></a>
 							<a href="#" class="text-white-50 ml-2"><i class="fa fa-user mr-2"></i>admin</a>
 						</div>
 
-						<h3 class="mt-3 mb-5 lh-36"><a href="#" class="text-white">Marketing Strategy to bring more affect</a></h3>
+						<h3 class="mt-3 mb-5 lh-36"><a href="blog-single.html" class="text-white">Efficient logistics strategies for import-export</a></h3>
 
 						<a href="blog-single.html" class="btn btn-small btn-solid-border btn-round-full text-white">Learn More</a>
 					</div>
@@ -478,11 +471,11 @@
 		<div class="cta-block-2 bg-gray p-5 rounded border-1">
 			<div class="row justify-content-center align-items-center ">
 				<div class="col-lg-7">
-					<span class="text-color">For Every type business</span>
-					<h2 class="mt-2 mb-4 mb-lg-0">Entrust Your Project to Our Best Team of Professionals</h2>
+					<span class="text-color">Professional Trading Solutions</span>
+					<h2 class="mt-2 mb-4 mb-lg-0">Let us help you expand your business internationally</h2>
 				</div>
 				<div class="col-lg-4">
-					<a href="contact.html" class="btn btn-main btn-round-full float-lg-right ">Contact Us</a>
+					<a href="contact.html" class="btn btn-main btn-round-full float-lg-right">Contact Us</a>
 				</div>
 			</div>
 		</div>
@@ -531,10 +524,10 @@
       <div class="col-lg-3 col-sm-6">
         <div class="widget">
           <div class="logo mb-4">
-            <h3>Mega<span>kit.</span></h3>
+            <img src="images/logo-text.svg" alt="Mandril" style="max-height: 40px; filter: brightness(0) invert(1);" onerror="this.onerror=null; this.src='images/logo.png';">
           </div>
-          <h6><a href="mailto:support@gmail.com">Support@megakit.com</a></h6>
-          <a href="tel:+23-345-67890"><span class="text-color h4">+23-456-6588</span></a>
+          <h6><a href="mailto:info@mandril.md">info@mandril.md</a></h6>
+          <a href="tel:+373-22-000-000"><span class="text-color h4">+373 22 000 000</span></a>
         </div>
       </div>
     </div>
