--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Megakit | HTML5 Agency Template</title>
+  <title>Mandril | HTML5 Agency Template</title>
 
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -61,8 +61,7 @@
         </div>
         <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
           <div class="header-top-info mb-2 mb-md-0">
-            <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
-            <a href="mailto:support@gmail.com"><i class="fas fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+            <a href="mailto:info@mandril.md"><i class="fas fa-envelope mr-2"></i><span>info@mandril.md</span></a>
           </div>
         </div>
       </div>
@@ -75,7 +74,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg px-0 py-4">
             <a class="navbar-brand" href="index.html">
-              Mega<span>kit.</span>
+              <img src="images/logo-text.svg" alt="Mandril" style="max-height: 50px;" onerror="this.onerror=null; this.src='images/logo.png';">
             </a>
       
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
@@ -143,7 +142,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-center">
-          <span class="text-white">About Us</span>
+          <span class="text-white">About Mandril</span>
           <h1 class="text-capitalize mb-4 text-lg">Our Company</h1>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
@@ -162,11 +161,11 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="about-item pr-3 mb-5 mb-lg-0">
-					<span class="h6 text-color">What we are</span>
-					<h2 class="mt-3 mb-4 position-relative content-title">We are dynamic team of creative people</h2>
-					<p class="mb-5">We provide consulting services in the area of IFRS and management reporting, helping companies to reach their highest level. We optimize business processes, making them easier.</p>
+					<span class="h6 text-color">Who we are</span>
+					<h2 class="mt-3 mb-4 position-relative content-title">Leading international trading company</h2>
+					<p class="mb-5">Mandril S.R.L. is a professional trading company specializing in import and export operations in industrial and agricultural sectors. We connect businesses across international markets with quality products and comprehensive support services.</p>
 
-					<a href="contact.html" class="btn btn-main btn-round-full">Get started</a>
+					<a href="contact.html" class="btn btn-main btn-round-full">Contact us</a>
 				</div>
 			</div>
 			<div class="col-lg-6">
@@ -185,20 +184,20 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="about-info-item mb-4 mb-lg-0">
-					<h3 class="mb-3"><span class="text-color mr-2 text-md ">01.</span>Our Mission</h3>
-					<p>llum similique ducimus accusamus laudantium praesentium, impedit quaerat, itaque maxime sunt deleniti voluptas distinctio .</p>
+					<h3 class="mb-3"><span class="text-color mr-2 text-md">01.</span>Our Mission</h3>
+					<p>To provide professional trading solutions that connect businesses across borders, delivering quality products and exceptional service in the industrial and agricultural sectors.</p>
 				</div>		
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="about-info-item mb-4 mb-lg-0">
-					<h3 class="mb-3"><span class="text-color mr-2 text-md">02.</span>Vission</h3>
-					<p>llum similique ducimus accusamus laudantium praesentium, impedit quaerat, itaque maxime sunt deleniti voluptas distinctio .</p>
+					<h3 class="mb-3"><span class="text-color mr-2 text-md">02.</span>Vision</h3>
+					<p>To become the leading trading partner for businesses seeking reliable import-export solutions, recognized for our integrity, expertise, and customer-focused approach.</p>
 				</div>		
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="about-info-item mb-4 mb-lg-0">
 					<h3 class="mb-3"><span class="text-color mr-2 text-md">03.</span>Our Approach</h3>
-					<p>llum similique ducimus accusamus laudantium praesentium, impedit quaerat, itaque maxime sunt deleniti voluptas distinctio .</p>
+					<p>We combine market knowledge, strong partnerships, and professional logistics to deliver customized solutions that meet each client's specific needs and requirements.</p>
 				</div>		
 			</div>
 		</div>
@@ -535,10 +534,10 @@
       <div class="col-lg-3 col-sm-6">
         <div class="widget">
           <div class="logo mb-4">
-            <h3>Mega<span>kit.</span></h3>
+            <img src="images/logo-text.svg" alt="Mandril" style="max-height: 40px; filter: brightness(0) invert(1);" onerror="this.onerror=null; this.src='images/logo.png';">
           </div>
-          <h6><a href="mailto:support@gmail.com">Support@megakit.com</a></h6>
-          <a href="tel:+23-345-67890"><span class="text-color h4">+23-456-6588</span></a>
+          <h6><a href="mailto:info@mandril.md">info@mandril.md</a></h6>
+          <a href="tel:+373-22-000-000"><span class="text-color h4">+373 22 000 000</span></a>
         </div>
       </div>
     </div>
@@ -577,7 +576,7 @@ Essential Scripts
 <!-- Bootstrap 4.3.1 -->
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <!--  Magnific Popup-->
-<script src="plugins/magnific-popup/jquery.magnific-popup.min.js"></script>
+<script src="plugins/magnific-popup/jquery.magnific-popup.min.js</script>
 <!-- Slick Slider -->
 <script src="plugins/slick/slick.min.js"></script>
 <!-- Counterup -->
@@ -592,4 +591,4 @@ Essential Scripts
 
 </body>
 
-</html>
+</html></html>
