--- a/blog-single.html
+++ b/blog-single.html
@@ -61,8 +61,7 @@
         </div>
         <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
           <div class="header-top-info mb-2 mb-md-0">
-            <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
-            <a href="mailto:support@gmail.com"><i class="fas fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+            <a href="mailto:info@mandril.md"><i class="fas fa-envelope mr-2"></i><span>info@mandril.md</span></a>
           </div>
         </div>
       </div>
@@ -75,7 +74,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg px-0 py-4">
             <a class="navbar-brand" href="index.html">
-              Mega<span>kit.</span>
+              <img src="images/logo-text.svg" alt="Mandril" style="max-height: 50px;" onerror="this.onerror=null; this.src='images/logo.png';">
             </a>
       
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
@@ -432,10 +431,10 @@
       <div class="col-lg-3 col-sm-6">
         <div class="widget">
           <div class="logo mb-4">
-            <h3>Mega<span>kit.</span></h3>
+            <img src="images/logo-text.svg" alt="Mandril" style="max-height: 40px; filter: brightness(0) invert(1);" onerror="this.onerror=null; this.src='images/logo.png';">
           </div>
-          <h6><a href="mailto:support@gmail.com">Support@megakit.com</a></h6>
-          <a href="tel:+23-345-67890"><span class="text-color h4">+23-456-6588</span></a>
+          <h6><a href="mailto:info@mandril.md">info@mandril.md</a></h6>
+          <a href="mailto:info@mandril.md"><span class="text-color h4">Contact Us</span></a>
         </div>
       </div>
     </div>
@@ -489,4 +488,4 @@ Essential Scripts
 
 </body>
 
-</html>
+</html></html>
