--- a/service.html
+++ b/service.html
@@ -61,8 +61,7 @@
         </div>
         <div class="col-lg-10 col-md-8 text-center text-lg-right text-md-right">
           <div class="header-top-info mb-2 mb-md-0">
-            <a href="tel:+23-345-67890">Call Us : <span>+23-345-67890</span></a>
-            <a href="mailto:support@gmail.com"><i class="fas fa-envelope mr-2"></i><span>support@gmail.com</span></a>
+            <a href="mailto:info@mandril.md"><i class="fas fa-envelope mr-2"></i><span>info@mandril.md</span></a>
           </div>
         </div>
       </div>
@@ -75,7 +74,7 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg px-0 py-4">
             <a class="navbar-brand" href="index.html">
-              Mega<span>kit.</span>
+              <img src="images/logo-text.svg" alt="Mandril" style="max-height: 50px;" onerror="this.onerror=null; this.src='images/logo.png';">
             </a>
       
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09"
@@ -144,11 +143,11 @@
       <div class="col-md-12">
         <div class="block text-center">
           <span class="text-white">Our services</span>
-          <h1 class="text-capitalize mb-4 text-lg">What We Do</h1>
+          <h1 class="text-capitalize mb-4 text-lg">What We Offer</h1>
           <ul class="list-inline">
             <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
             <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item text-white-50">Our services</li>
+            <li class="list-inline-item text-white-50">Services</li>
           </ul>
         </div>
       </div>
@@ -163,7 +162,7 @@
 			<div class="col-lg-7 text-center">
 				<div class="section-title">
 					<span class="h6 text-color">Our Services</span>
-					<h2 class="mt-3 content-title ">We provide a wide range of creative services </h2>
+					<h2 class="mt-3 content-title">Comprehensive trading solutions for various industries</h2>
 				</div>
 			</div>
 		</div>
@@ -171,73 +170,73 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-desktop"></i>
-					<h4 class="mb-3">Web development.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-bolt"></i>
+					<h4 class="mb-3">Fuels, Ores and Metals</h4>
+					<p>Professional trading services for fuels, ores and metals on international markets with full documentation support</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-layers"></i>
-					<h4 class="mb-3">Interface Design.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-package"></i>
+					<h4 class="mb-3">Industrial Chemicals</h4>
+					<p>Import and export of industrial chemical products for manufacturing and processing industries</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-bar-chart"></i>
-					<h4 class="mb-3">Business Consulting.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-settings"></i>
+					<h4 class="mb-3">Machinery & Equipment</h4>
+					<p>Supply of industrial machinery and equipment with installation and technical support services</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-vector"></i>
-					<h4 class="mb-3">Branding.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-crown"></i>
+					<h4 class="mb-3">Cereals & Agricultural Products</h4>
+					<p>Professional trading services for cereals, grains and other agricultural commodities worldwide</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-android"></i>
-					<h4 class="mb-3">App development.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-apple"></i>
+					<h4 class="mb-3">Fresh & Dried Fruits</h4>
+					<p>Import and export of premium quality fresh and dried fruits with proper cold chain logistics</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-pencil-alt"></i>
-					<h4 class="mb-3">Content creation.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-truck"></i>
+					<h4 class="mb-3">Logistics & Warehousing</h4>
+					<p>Complete logistics solutions including transportation, customs clearance and warehousing services</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-layers"></i>
-					<h4 class="mb-3">Interface Design.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-world"></i>
+					<h4 class="mb-3">Market Research</h4>
+					<p>Professional market analysis and research services to identify best opportunities for your business</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-bar-chart"></i>
-					<h4 class="mb-3">Business Consulting.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-files"></i>
+					<h4 class="mb-3">Documentation Support</h4>
+					<p>Full documentation and customs support for smooth international trading operations</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="service-item mb-5">
-					<i class="ti-vector"></i>
-					<h4 class="mb-3">Branding.</h4>
-					<p>A digital agency isn't here to replace your internal team, we're here to partner</p>
+					<i class="ti-headphone-alt"></i>
+					<h4 class="mb-3">24/7 Customer Support</h4>
+					<p>Round-the-clock professional support for all your trading needs and inquiries</p>
 				</div>
 			</div>
 		</div>
@@ -303,10 +302,10 @@
       <div class="col-lg-3 col-sm-6">
         <div class="widget">
           <div class="logo mb-4">
-            <h3>Mega<span>kit.</span></h3>
+            <img src="images/logo-text.svg" alt="Mandril" style="max-height: 40px; filter: brightness(0) invert(1);" onerror="this.onerror=null; this.src='images/logo.png';">
           </div>
-          <h6><a href="mailto:support@gmail.com">Support@megakit.com</a></h6>
-          <a href="tel:+23-345-67890"><span class="text-color h4">+23-456-6588</span></a>
+          <h6><a href="mailto:info@mandril.md">info@mandril.md</a></h6>
+          <a href="mailto:info@mandril.md"><span class="text-color h4">Contact Us</span></a>
         </div>
       </div>
     </div>
@@ -360,4 +359,4 @@ Essential Scripts
 
 </body>
 
-</html>
+</html></html>
