--- a/blog-grid.html
+++ b/blog-grid.html
@@ -175,7 +175,7 @@ Essential Scripts
 <!-- Main jQuery -->
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- Load Header/Footer -->
-<script src="js/load-includes.js"></script>
+<script src="js/includes.js"></script>
 <!-- Bootstrap 4.3.1 -->
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <!--  Magnific Popup-->
