--- a/service.html
+++ b/service.html
@@ -81,77 +81,63 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-bolt"></i>
 					<h4 class="mb-3">Fuels, Ores and Metals</h4>
 					<p>Professional trading services for fuels, ores and metals on international markets with full documentation support</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-package"></i>
 					<h4 class="mb-3">Industrial Chemicals</h4>
 					<p>Import and export of industrial chemical products for manufacturing and processing industries</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-settings"></i>
 					<h4 class="mb-3">Machinery & Equipment</h4>
 					<p>Supply of industrial machinery and equipment with installation and technical support services</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-crown"></i>
 					<h4 class="mb-3">Cereals & Agricultural Products</h4>
 					<p>Professional trading services for cereals, grains and other agricultural commodities worldwide</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
-					<i class="ti-apple"></i>
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
+					<i class="ti-shopping-cart-full"></i>
 					<h4 class="mb-3">Fresh & Dried Fruits</h4>
 					<p>Import and export of premium quality fresh and dried fruits with proper cold chain logistics</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-truck"></i>
 					<h4 class="mb-3">Logistics & Warehousing</h4>
 					<p>Complete logistics solutions including transportation, customs clearance and warehousing services</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
-					<i class="ti-world"></i>
-					<h4 class="mb-3">Market Research</h4>
-					<p>Professional market analysis and research services to identify best opportunities for your business</p>
-				</div>
-			</div>
-
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
+			<div class="col-lg-4 col-md-6 col-sm-6 d-flex mx-auto">
+				<div class="service-item mb-5 w-100">
 					<i class="ti-files"></i>
 					<h4 class="mb-3">Documentation Support</h4>
 					<p>Full documentation and customs support for smooth international trading operations</p>
 				</div>
 			</div>
 
-			<div class="col-lg-4 col-md-6 col-sm-6">
-				<div class="service-item mb-5">
-					<i class="ti-headphone-alt"></i>
-					<h4 class="mb-3">24/7 Customer Support</h4>
-					<p>Round-the-clock professional support for all your trading needs and inquiries</p>
-				</div>
-			</div>
+		
 		</div>
 	</div>
 </section>
