--- a/service.html
+++ b/service.html
@@ -39,9 +39,10 @@
   <link rel="stylesheet" href="css/logo-colors.css">
   <link rel="stylesheet" href="css/section-colors.css">
   <link rel="stylesheet" href="css/sticky-nav.css">
-  
+  <link rel="stylesheet" href="css/animations.css">
+
   <!--Favicon-->
-  <link rel="icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="images/favicon.png" type="image/x-icon">
 
 </head>
 
@@ -55,12 +56,12 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-center">
-          <span class="text-white">Our services</span>
-          <h1 class="text-capitalize mb-4 text-lg">What We Offer</h1>
+          <span class="text-white" data-lang="page.services.title">Our services</span>
+          <h1 class="text-capitalize mb-4 text-lg" data-lang="page.services.subtitle">What We Offer</h1>
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+            <li class="list-inline-item"><a href="index.html" class="text-white" data-lang="page.services.breadcrumb.home">Home</a></li>
             <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item text-white-50">Services</li>
+            <li class="list-inline-item text-white-50" data-lang="page.services.breadcrumb">Services</li>
           </ul>
         </div>
       </div>
@@ -74,66 +75,66 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-7 text-center">
 				<div class="section-title">
-					<span class="h6 text-color">Our Services</span>
-					<h2 class="mt-3 content-title">Comprehensive trading solutions for various industries</h2>
+					<span class="h6 text-color" data-lang="services.page.subtitle">Our Services</span>
+					<h2 class="mt-3 content-title" data-lang="services.page.title">Comprehensive trading solutions for various industries</h2>
 				</div>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-100">
 					<i class="ti-bolt"></i>
-					<h4 class="mb-3">Fuels, Ores and Metals</h4>
-					<p>Professional trading services for fuels, ores and metals on international markets with full documentation support</p>
+					<h4 class="mb-3" data-lang="service1.title">Fuels, Ores and Metals</h4>
+					<p data-lang="service1.page.text">Professional trading services for fuels, ores and metals on international markets with full documentation support</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-200">
 					<i class="ti-package"></i>
-					<h4 class="mb-3">Industrial Chemicals</h4>
-					<p>Import and export of industrial chemical products for manufacturing and processing industries</p>
+					<h4 class="mb-3" data-lang="service2.title">Industrial Chemicals</h4>
+					<p data-lang="service2.page.text">Import and export of industrial chemical products for manufacturing and processing industries</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-300">
 					<i class="ti-settings"></i>
-					<h4 class="mb-3">Machinery & Equipment</h4>
-					<p>Supply of industrial machinery and equipment with installation and technical support services</p>
+					<h4 class="mb-3" data-lang="service3.title">Machinery & Industrial Equipment</h4>
+					<p data-lang="service3.page.text">Supply of industrial machinery and equipment with installation and technical support services</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-100">
 					<i class="ti-crown"></i>
-					<h4 class="mb-3">Cereals & Agricultural Products</h4>
-					<p>Professional trading services for cereals, grains and other agricultural commodities worldwide</p>
+					<h4 class="mb-3" data-lang="service4.title">Cereals & Agricultural Products</h4>
+					<p data-lang="service4.page.text">Professional trading services for cereals, grains and other agricultural commodities worldwide</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-200">
 					<i class="ti-shopping-cart-full"></i>
-					<h4 class="mb-3">Fresh & Dried Fruits</h4>
-					<p>Import and export of premium quality fresh and dried fruits with proper cold chain logistics</p>
+					<h4 class="mb-3" data-lang="service5.title">Fresh & Dried Fruits</h4>
+					<p data-lang="service5.page.text">Import and export of premium quality fresh and dried fruits with proper cold chain logistics</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-300">
 					<i class="ti-truck"></i>
-					<h4 class="mb-3">Logistics & Warehousing</h4>
-					<p>Complete logistics solutions including transportation, customs clearance and warehousing services</p>
+					<h4 class="mb-3" data-lang="service6.title">Logistics Support</h4>
+					<p data-lang="service6.text">Comprehensive logistics and delivery solutions for all products</p>
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-md-6 col-sm-6 d-flex mx-auto">
-				<div class="service-item mb-5 w-100">
+				<div class="service-item mb-5 w-100 animate-on-scroll scale-in delay-100">
 					<i class="ti-files"></i>
-					<h4 class="mb-3">Documentation Support</h4>
-					<p>Full documentation and customs support for smooth international trading operations</p>
+					<h4 class="mb-3" data-lang="service7.title">Documentation Support</h4>
+					<p data-lang="service7.text">Full documentation and customs support for smooth international trading operations</p>
 				</div>
 			</div>
 
@@ -145,14 +146,14 @@
 
 <section class="cta-2">
 	<div class="container">
-		<div class="cta-block p-5 rounded">
+		<div class="cta-block p-5 rounded animate-on-scroll scale-in">
 			<div class="row justify-content-center align-items-center ">
 				<div class="col-lg-7 text-center text-lg-left">
-					<span class="text-color">For Every type business</span>
-					<h2 class="mt-2 text-white">Entrust Your Project to Our Best Team of Professionals</h2>
+					<span class="text-color" data-lang="services.page.cta.subtitle">For Every type business</span>
+					<h2 class="mt-2 text-white" data-lang="services.page.cta.title">Entrust Your Project to Our Best Team of Professionals</h2>
 				</div>
 				<div class="col-lg-4 text-center text-lg-right mt-4 mt-lg-0">
-					<a href="contact.html" class="btn btn-main btn-round-full">Contact Us</a>
+					<a href="contact.html" class="btn btn-main btn-round-full" data-lang="services.page.cta.button">Contact Us</a>
 				</div>
 			</div>
 		</div>
@@ -169,6 +170,8 @@ Essential Scripts
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- Load Header/Footer -->
 <script src="js/includes.js"></script>
+<!-- Language System -->
+<script src="js/language.js"></script>
 <!-- Bootstrap 4.3.1 -->
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <!--  Magnific Popup-->
