--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,8 @@
   <link rel="stylesheet" href="css/logo-colors.css">
   <link rel="stylesheet" href="css/section-colors.css">
   <link rel="stylesheet" href="css/sticky-nav.css">
-  
+  <link rel="stylesheet" href="css/animations.css">
+
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
@@ -55,12 +56,12 @@
     <div class="row">
       <div class="col-md-12">
         <div class="block text-center">
-          <span class="text-white">Contact Us</span>
-          <h1 class="text-capitalize mb-4 text-lg">Get in Touch</h1>
+          <span class="text-white" data-lang="page.contact.title">Contact Us</span>
+          <h1 class="text-capitalize mb-4 text-lg" data-lang="page.contact.subtitle">Get in Touch</h1>
           <ul class="list-inline">
-            <li class="list-inline-item"><a href="index.html" class="text-white">Home</a></li>
+            <li class="list-inline-item"><a href="index.html" class="text-white" data-lang="page.contact.breadcrumb.home">Home</a></li>
             <li class="list-inline-item"><span class="text-white">/</span></li>
-            <li class="list-inline-item text-white-50">Contact Us</li>
+            <li class="list-inline-item text-white-50" data-lang="page.contact.breadcrumb">Contact Us</li>
           </ul>
         </div>
       </div>
@@ -73,25 +74,25 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12 col-sm-12">
-				<form id="contact-form" class="contact__form" method="post" action="index.html">
-					<h3 class="text-md mb-4">Contact Form</h3>
+				<form id="contact-form" class="contact__form animate-on-scroll fade-in-up" method="post" action="index.html">
+					<h3 class="text-md mb-4" data-lang="contact.form.title">Contact Form</h3>
 					<div class="form-group">
-						<input name="name" type="text" class="form-control" placeholder="Your Name" required>
+						<input name="name" type="text" class="form-control" data-lang="contact.form.name" placeholder="Your Name" required>
 					</div>
 					<div class="form-group">
-						<input name="email" type="email" class="form-control" placeholder="Email Address" required>
+						<input name="email" type="email" class="form-control" data-lang="contact.form.email" placeholder="Email Address" required>
 					</div>
 					<div class="form-group-2 mb-4">
-						<textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
+						<textarea name="message" class="form-control" rows="4" data-lang="contact.form.message" placeholder="Your Message" required></textarea>
 					</div>
-					<button class="btn btn-main" name="submit" type="submit">Send Message</button>
+					<button class="btn btn-main" name="submit" type="submit" data-lang="contact.form.submit">Send Message</button>
 				</form>
 			</div>
 
 			<div class="col-lg-5 col-sm-12">
-				<div class="contact-content pl-lg-5 mt-5 mt-lg-0">
-					
-					<h2 class="mb-5 mt-2">Don't hesitate to contact us for any inquiries</h2>
+				<div class="contact-content pl-lg-5 mt-5 mt-lg-0 animate-on-scroll fade-in-up delay-200">
+
+					<h2 class="mb-5 mt-2" data-lang="contact.page.heading">Don't hesitate to contact us for any inquiries</h2>
 
 					<ul class="address-block list-unstyled">
 						<li>
@@ -107,10 +108,10 @@
 
 					<ul class="social-icons list-inline mt-5">
 						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-facebook-f"></i></a>
+							<a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
 						</li>
 						<li class="list-inline-item">
-							<a href="#"><i class="fab fa-linkedin-in"></i></a>
+							<a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
 						</li>
 					</ul>
 				</div>
@@ -133,6 +134,8 @@ Essential Scripts
 <script src="plugins/jquery/jquery.min.js"></script>
 <!-- Load Header/Footer -->
 <script src="js/includes.js"></script>
+<!-- Language System -->
+<script src="js/language.js"></script>
 <!-- Bootstrap 4.3.1 -->
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <!--  Magnific Popup-->
