--- a/about.html
+++ b/about.html
@@ -40,6 +40,7 @@
   <link rel="stylesheet" href="css/section-colors.css">
   <link rel="stylesheet" href="css/sticky-nav.css">
   <link rel="stylesheet" href="css/animations.css">
+  <link rel="stylesheet" href="css/scroll-animations.css">
 
   <!--Favicon-->
   <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -132,6 +133,10 @@ Essential Scripts
 <script src="js/includes.js"></script>
 <!-- Language System -->
 <script src="js/language.js"></script>
+<!-- Scroll Animations -->
+<script src="js/scroll-animations.js"></script>
+<!-- Scroll to Top -->
+<script src="js/scroll-to-top.js"></script>
 <!-- Bootstrap 4.3.1 -->
 <script src="plugins/bootstrap/bootstrap.min.js"></script>
 <!--  Magnific Popup-->
