--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 	<div class="container">
 		<div class="row ">
 			<div class="col-lg-8">
-				<div class="section-title">
+				<div class="section-title animate-on-scroll fade-in-up">
 					<span class="h6 text-color" data-lang="intro.subtitle">We are experts in international trade</span>
 					<h2 class="mt-3 content-title" data-lang="intro.title">We provide professional solutions for import and export in industrial and agricultural sectors</h2>
 				</div>
@@ -134,7 +134,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-7 text-center">
-				<div class="section-title">
+				<div class="section-title animate-on-scroll fade-in-up">
 					<span class="h6 text-color" data-lang="services.subtitle">Our Services</span>
 					<h2 class="mt-3 content-title" data-lang="services.title">We provide comprehensive commercial solutions for various sectors</h2>
 				</div>
