--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <html lang="zxx">
 <head>
 
-  <!-- ** Basic Page Needs ** -->
+  <!-- ** Basic Page Needs ** -->Our Mission
   <meta charset="utf-8">
   <title>Mandril | HTML5 Agency Template</title>
 
@@ -93,13 +93,13 @@
 </section>
 
 <!-- Section About End -->
- 
+ </br></br>
 <section class="about-info section pt-0">
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-4 col-md-6 col-sm-6">
 				<div class="about-info-item mb-4 mb-lg-0 animate-on-scroll fade-in-up delay-100">
-					<h3 class="mb-3"><span class="text-color mr-2 text-md">01.</span><span data-lang="about.mission.title">Our Mission</span></h3>
+        <h3 class="mb-3"><span class="text-color mr-2 text-md">01.</span><span data-lang="about.mission.title">Our Mission</span></h3>
 					<p data-lang="about.mission.text">To provide professional trading solutions that connect businesses across borders, delivering quality products and exceptional service in the industrial and agricultural sectors.</p>
 				</div>
 			</div>
