--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			<div class="col-lg-6 offset-lg-6 offset-md-0">
 				<div class="about-item animate-on-scroll slide-in-right">
 					<span class="h6 text-color" data-lang="about.subtitle">Who we are</span>
-					<h2 class="mt-3 mb-4 position-relative content-title" data-lang="about.title">Your reliable partner in international trade</h2>
+					<h2 class="mb-4 position-relative content-title" data-lang="about.title">Your reliable partner in international trade</h2>
 					<div class="about-content">
 						<p class="mb-5" data-lang="about.text">We provide comprehensive trading services in the industrial and agricultural sectors, connecting businesses across international markets with quality products and professional support.</p>
 
@@ -134,7 +134,8 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-7 text-center">
-				<div class="section-title animate-on-scroll fade-in-up">
+				<div class="section-title animate-on-scroll fade-in-up">,
+				</br>	</br>
 					<span class="h6 text-color" data-lang="services.subtitle">Our Services</span>
 					<h2 class="mt-3 content-title" data-lang="services.title">We provide comprehensive commercial solutions for various sectors</h2>
 				</div>
