--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="block">
 					<span class="d-block mb-3 text-white text-capitalize" data-lang="hero.subtitle">International trade</span>
 					<h1 class="animated fadeInUp mb-5" data-lang="hero.title">Your trusted partner for trade operations </h1>
-					<a href="#contact" class="btn btn-main animated fadeInUp btn-round-full" data-lang="hero.button" aria-label="Get started">Get started<i class="btn-icon fa fa-angle-right ml-2"></i></a>
+					<a href="contact.html" class="btn btn-main animated fadeInUp btn-round-full" data-lang="hero.button" aria-label="Get started">Get started<i class="btn-icon fa fa-angle-right ml-2"></i></a>
 				</div>
 			</div>
 		</div>
@@ -121,7 +121,7 @@
 					<div class="about-content">
 						<p class="mb-5" data-lang="about.text">We provide comprehensive trading services in the industrial and agricultural sectors, connecting businesses across international markets with quality products and professional support.</p>
 
-						<a href="#contact" class="btn btn-main btn-round-full" data-lang="about.button">Contact us</a>
+						<a href="contact.html" class="btn btn-main btn-round-full" data-lang="about.button">Contact us</a>
 					</div>
 				</div>
 			</div>
